Actions
Bug #8742
closedpotential iscsi panic
Start date:
2017-10-27
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
As discovered and fixed in SmartOS by https://github.com/joyent/illumos-joyent/commit/15f634b506331928cba41f373c773cea1abd271d
Updated by Electric Monk about 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 2727bb055f7c5df6135eafd90bde85347d04d071
commit 2727bb055f7c5df6135eafd90bde85347d04d071 Author: Tim Kordas <tim.kordas@joyent.com> Date: 2017-10-27T19:25:33.000Z 8742 potential iscsi panic Reviewed by: Dan McDonald <danmcd@joyent.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Approved by: Albert Lee <trisk@forkgnu.org>
Updated by Dan McDonald about 6 years ago
Updated by Dan McDonald about 6 years ago
Actions